# custom-experimentalist

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/experimentalist/custom/: __init__.py
tests/: test_custom.py
